Improved layout and Settlements when in graph / horizon view

--- a/frontend/src/lib/i18n/translations/en.json
+++ b/frontend/src/lib/i18n/translations/en.json
@@ -165,12 +165,21 @@
 	"overview.recurring": "recurring",
 	"overview.paidBy": "Paid by",
 	"overview.from": "From",
-	"overview.to": "to",
+	"overview.to": "To",
 	"overview.on": "on",
 	"overview.optional": "(optional)",
 	"overview.clearRange": "Clear Range",
 	"overview.rangeMode": "Range Mode",
 	"overview.selectEndDate": "Select end date",
+	"overview.horizon": "Horizon",
+	"overview.horizonNone": "None",
+	"overview.threeMonths": "3 Months",
+	"overview.sixMonths": "6 Months",
+	"overview.twelveMonths": "12 Months",
+	"overview.customDate": "Custom",
+	"overview.untilToday": "Until Today",
+	"overview.atStart": "At start",
+	"overview.atEnd": "At end",
 	"overview.amountPaidFor": "{payer} paid {amount} for {paidFor}",
 	"overview.amountContributed": "{payer} contributed {amount}",
 	"overview.amountConsumed": "{consumer} comsumed {amount}",
