--- a/frontend/src/lib/i18n/translations/fr.json
+++ b/frontend/src/lib/i18n/translations/fr.json
@@ -165,12 +165,21 @@
 	"overview.recurring": "récurrent",
 	"overview.paidBy": "Payé par",
 	"overview.from": "Du",
-	"overview.to": "au",
+	"overview.to": "Au",
 	"overview.on": "le",
 	"overview.optional": "(optionnel)",
 	"overview.clearRange": "Effacer la plage",
 	"overview.rangeMode": "Mode période",
 	"overview.selectEndDate": "Sélectionner la date de fin",
+	"overview.horizon": "Horizon",
+	"overview.horizonNone": "Aucun",
+	"overview.threeMonths": "3 mois",
+	"overview.sixMonths": "6 mois",
+	"overview.twelveMonths": "12 mois",
+	"overview.customDate": "Personnalisé",
+	"overview.untilToday": "Jusqu'à aujourd'hui",
+	"overview.atStart": "Au début",
+	"overview.atEnd": "À la fin",
 	"overview.amountPaidFor": "{payer} a payé {amount} pour {paidFor}",
 	"overview.amountContributed": "{payer} a contribué {amount}",
 	"overview.amountConsumed": "{consumer} a pris {amount}",
