--- a/frontend/src/lib/i18n/translations/fr.json
+++ b/frontend/src/lib/i18n/translations/fr.json
@@ -148,7 +148,7 @@
 	"overview.future": "Futur",
 	"overview.past": "Passé",
 	"overview.focusOn": "Focus sur",
-	"overview.allParticipants": "Tous les participants",
+	"overview.allParticipants": "tous les participants",
 	"overview.noPoolActivity": "Aucune activité de cagnotte pour le moment",
 	"overview.participant": "Participant",
 	"overview.ownership": "Part",
@@ -164,9 +164,25 @@
 	"overview.transactions": "transactions",
 	"overview.recurring": "récurrent",
 	"overview.paidBy": "Payé par",
-	"overview.from": "du",
-	"overview.to": "au",
+	"overview.from": "Du",
+	"overview.to": "Au",
 	"overview.on": "le",
+	"overview.optional": "(optionnel)",
+	"overview.clearRange": "Effacer la plage",
+	"overview.rangeMode": "Mode période",
+	"overview.selectEndDate": "Sélectionner la date de fin",
+	"overview.horizon": "Horizon",
+	"overview.horizonNone": "Aucun",
+	"overview.threeMonths": "3 mois",
+	"overview.sixMonths": "6 mois",
+	"overview.twelveMonths": "12 mois",
+	"overview.customDate": "Personnalisé",
+	"overview.untilToday": "Jusqu'à aujourd'hui",
+	"overview.atStart": "Au début",
+	"overview.atEnd": "À la fin",
+	"overview.amountPaidFor": "{payer} a payé {amount} pour {paidFor}",
+	"overview.amountContributed": "{payer} a contribué {amount}",
+	"overview.amountConsumed": "{consumer} a pris {amount}",
 
 	"cashflow.title": "Planification de trésorerie",
 	"cashflow.failedToLoad": "Échec du chargement de la projection de trésorerie",
