Fix a few missing translations in project settings dialog boxes

--- a/frontend/src/lib/i18n/translations/en.json
+++ b/frontend/src/lib/i18n/translations/en.json
@@ -183,6 +183,9 @@
 	"overview.amountPaidFor": "{payer} paid {amount} for {paidFor}",
 	"overview.amountContributed": "{payer} contributed {amount}",
 	"overview.amountConsumed": "{consumer} comsumed {amount}",
+	"overview.goToDate": "Go to {date}",
+	"overview.noPreviousPayment": "No previous payment",
+	"overview.noNextPayment": "No next payment",
 
 	"cashflow.title": "Cashflow Planning",
 	"cashflow.failedToLoad": "Failed to load cashflow projection",
@@ -318,6 +321,7 @@
 	"payments.occurringOn": "on {date}",
 
 	"participants.title": "Participants",
+	"participants.description": "Natural or legal persons participating in the project, with or without an associated member user",
 	"participants.addParticipant": "Add Participant",
 	"participants.name": "Name",
 	"participants.participantNamePlaceholder": "Participant name",
@@ -341,6 +345,7 @@
 	"participants.generateInviteLink": "Generate Invite Link",
 
 	"members.title": "Members",
+	"members.description": "Users with access to the project, whether they are participants or not",
 	"members.inviteLink": "Invite Link",
 	"members.shareCodeHint": "Share this code with others to let them join the project:",
 	"members.projectMembers": "Project Members",
@@ -390,9 +395,6 @@
 	"history.entities.contribution": "Contribution",
 	"history.entities.participant_invite": "Invite",
 
-	"settings.backToProjects": "← Back to projects",
-
-	"projectSettings.backToProject": "← Back to project",
 	"projectSettings.title": "Project Settings",
 	"projectSettings.needAdminPermissions": "You need admin permissions to access settings.",
 	"projectSettings.projectDetails": "Project Details",
@@ -418,6 +420,43 @@
 	"projectSettings.projectNamePlaceholder": "Project name",
 	"projectSettings.deleting": "Deleting...",
 	"projectSettings.confirmDelete": "Confirm Delete",
+	"projectSettings.handleSave.success": "Project updated successfully",
+	"projectSettings.handleSave.fail": "Failed to update project",
+	"projectSettings.handleRegenerateCode.confirm": "Generate a new invite code? The old code will stop working.",
+	"projectSettings.handleRegenerateCode.success": "Invite code regenerated",
+	"projectSettings.handleRegenerateCode.fail": "Failed to regenerate code",
+	"projectSettings.handleSaveSettings.success": "Invite settings updated",
+	"projectSettings.handleSaveSettings.fail": "Failed to update settings",
+	"projectSettings.loadPendingMembers.fail": "Failed to load pending members:",
+	"projectSettings.handleApproveMember.success": "Member approved",
+	"projectSettings.handleApproveMember.fail": "Failed to approve member",
+	"projectSettings.handleRejectMember.confirm": "Are you sure you want to reject this member request?",
+	"projectSettings.handleRejectMember.success": "Member rejected",
+	"projectSettings.handleRejectMember.fail": "Failed to reject member",
+	"projectSettings.handleAddParticipant.success": "Participant added successfully",
+	"projectSettings.handleAddParticipant.fail": "Failed to add participant",
+	"projectSettings.handleUpdateParticipant.success": "Participant updated successfully",
+	"projectSettings.handleUpdateParticipant.fail": "Failed to update participant",
+	"projectSettings.handleDeleteParticipant.confirm": "Delete this participant? This will also remove their contributions.",
+	"projectSettings.handleDeleteParticipant.success": "Participant deleted successfully",
+	"projectSettings.handleDeleteParticipant.fail": "Failed to delete participant",
+	"projectSettings.handleClaimParticipant.success": "You are now associated with this participant",
+	"projectSettings.handleClaimParticipant.fail": "Failed to claim participant",
+	"projectSettings.handleGenerateParticipantInvite.success": "Invite link generated",
+	"projectSettings.handleGenerateParticipantInvite.fail": "Failed to generate invite",
+	"projectSettings.handleRevokeParticipantInvite.confirm": "Revoke this invite link? Anyone who has it will no longer be able to use it.",
+	"projectSettings.handleRevokeParticipantInvite.success": "Invite link revoked",
+	"projectSettings.handleRevokeParticipantInvite.fail": "Failed to revoke invite",
+	"projectSettings.handleUpdateMemberRole.success": "Role updated successfully",
+	"projectSettings.handleUpdateMemberRole.fail": "Failed to update role",
+	"projectSettings.handleSetMemberParticipant.success": "Participant link updated",
+	"projectSettings.handleSetMemberParticipant.fail": "Failed to update participant link",
+	"projectSettings.handleRemoveMember.confirm": "Remove this member from the project?",
+	"projectSettings.handleRemoveMember.success": "Member removed successfully",
+	"projectSettings.handleRemoveMember.fail": "Failed to remove member",
+	"projectSettings.handleDelete.cancel": "Project name does not match",
+	"projectSettings.handleDelete.fail": "Failed to delete project",
+	"projectSettings.copyParticipantInviteUrl.fail": "Failed to copy to clipboard",
 
 	"weekdays.sun": "Sun",
 	"weekdays.mon": "Mon",
