--- a/frontend/src/lib/i18n/translations/fr.json
+++ b/frontend/src/lib/i18n/translations/fr.json
@@ -183,6 +183,9 @@
 	"overview.amountPaidFor": "{payer} a payé {amount} pour {paidFor}",
 	"overview.amountContributed": "{payer} a contribué {amount}",
 	"overview.amountConsumed": "{consumer} a pris {amount}",
+	"overview.goToDate": "Aller au {date}",
+	"overview.noPreviousPayment": "Aucun paiement précédent",
+	"overview.noNextPayment": "Aucun paiement suivant",
 
 	"cashflow.title": "Planification de trésorerie",
 	"cashflow.failedToLoad": "Échec du chargement de la projection de trésorerie",
@@ -318,6 +321,7 @@
 	"payments.occurringOn": "le {date}",
 
 	"participants.title": "Participants",
+	"participants.description": "Personnes physiques ou morales participant au projet, avec ou sans utilisateur membre associé",
 	"participants.addParticipant": "Ajouter un participant",
 	"participants.name": "Nom",
 	"participants.participantNamePlaceholder": "Nom du participant",
@@ -341,6 +345,7 @@
 	"participants.generateInviteLink": "Générer un lien d'invitation",
 
 	"members.title": "Membres",
+	"members.description": "Utilisateurs ayant accès au projet, qu’ils soient participants ou non",
 	"members.inviteLink": "Lien d'invitation",
 	"members.shareCodeHint": "Partagez ce code avec d'autres pour leur permettre de rejoindre le projet :",
 	"members.projectMembers": "Membres du projet",
@@ -390,9 +395,6 @@
 	"history.entities.contribution": "Contribution",
 	"history.entities.participant_invite": "Invitation",
 
-	"settings.backToProjects": "← Retour aux projets",
-
-	"projectSettings.backToProject": "← Retour au projet",
 	"projectSettings.title": "Paramètres du projet",
 	"projectSettings.needAdminPermissions": "Vous avez besoin de permissions d'administrateur pour accéder aux paramètres.",
 	"projectSettings.projectDetails": "Détails du projet",
@@ -418,6 +420,43 @@
 	"projectSettings.projectNamePlaceholder": "Nom du projet",
 	"projectSettings.deleting": "Suppression...",
 	"projectSettings.confirmDelete": "Confirmer la suppression",
+	"projectSettings.handleSave.success": "Projet mis à jour avec succès",
+	"projectSettings.handleSave.fail": "Échec de la mise à jour du projet",
+	"projectSettings.handleRegenerateCode.confirm": "Générer un nouveau code d’invitation ? L’ancien code ne fonctionnera plus.",
+	"projectSettings.handleRegenerateCode.success": "Code d’invitation régénéré",
+	"projectSettings.handleRegenerateCode.fail": "Échec de la régénération du code",
+	"projectSettings.handleSaveSettings.success": "Paramètres d’invitation mis à jour",
+	"projectSettings.handleSaveSettings.fail": "Échec de la mise à jour des paramètres",
+	"projectSettings.loadPendingMembers.fail": "Échec du chargement des membres en attente :",
+	"projectSettings.handleApproveMember.success": "Membre approuvé",
+	"projectSettings.handleApproveMember.fail": "Échec de l’approbation du membre",
+	"projectSettings.handleRejectMember.confirm": "Êtes-vous sûr de vouloir rejeter cette demande d’adhésion ?",
+	"projectSettings.handleRejectMember.success": "Membre rejeté",
+	"projectSettings.handleRejectMember.fail": "Échec du rejet du membre",
+	"projectSettings.handleAddParticipant.success": "Participant ajouté avec succès",
+	"projectSettings.handleAddParticipant.fail": "Échec de l’ajout du participant",
+	"projectSettings.handleUpdateParticipant.success": "Participant mis à jour avec succès",
+	"projectSettings.handleUpdateParticipant.fail": "Échec de la mise à jour du participant",
+	"projectSettings.handleDeleteParticipant.confirm": "Supprimer ce participant ? Cela supprimera également ses contributions.",
+	"projectSettings.handleDeleteParticipant.success": "Participant supprimé avec succès",
+	"projectSettings.handleDeleteParticipant.fail": "Échec de la suppression du participant",
+	"projectSettings.handleClaimParticipant.success": "Vous êtes maintenant associé à ce participant",
+	"projectSettings.handleClaimParticipant.fail": "Échec de l’association au participant",
+	"projectSettings.handleGenerateParticipantInvite.success": "Lien d’invitation généré",
+	"projectSettings.handleGenerateParticipantInvite.fail": "Échec de la génération de l’invitation",
+	"projectSettings.handleRevokeParticipantInvite.confirm": "Révoquer ce lien d’invitation ? Toute personne qui le possède ne pourra plus l’utiliser.",
+	"projectSettings.handleRevokeParticipantInvite.success": "Lien d’invitation révoqué",
+	"projectSettings.handleRevokeParticipantInvite.fail": "Échec de la révocation de l’invitation",
+	"projectSettings.handleUpdateMemberRole.success": "Rôle mis à jour avec succès",
+	"projectSettings.handleUpdateMemberRole.fail": "Échec de la mise à jour du rôle",
+	"projectSettings.handleSetMemberParticipant.success": "Lien du participant mis à jour",
+	"projectSettings.handleSetMemberParticipant.fail": "Échec de la mise à jour du lien du participant",
+	"projectSettings.handleRemoveMember.confirm": "Retirer ce membre du projet ?",
+	"projectSettings.handleRemoveMember.success": "Membre retiré avec succès",
+	"projectSettings.handleRemoveMember.fail": "Échec du retrait du membre",
+	"projectSettings.handleDelete.cancel": "Le nom du projet ne correspond pas",
+	"projectSettings.handleDelete.fail": "Échec de la suppression du projet",
+	"projectSettings.copyParticipantInviteUrl.fail": "Échec de la copie dans le presse-papiers",
 
 	"weekdays.sun": "Dim",
 	"weekdays.mon": "Lun",
