Add the concept of receiving money to be shared (or not) between members

--- a/frontend/src/lib/i18n/translations/en.json
+++ b/frontend/src/lib/i18n/translations/en.json
@@ -310,7 +310,12 @@
   "payments.allTypes": "All types",
   "payments.typeExpense": "External expense",
   "payments.typeTransfer": "Internal transfer",
+  "payments.typeInflow": "External funds",
   "payments.typeRecurring": "Recurring",
+  "payments.externalInflow": "External funds",
+  "payments.inflowReceiver": "Received by",
+  "payments.externalInflowTo": "External funds to",
+  "payments.externalIndicator": "External",
   "payments.dateFrom": "From date",
   "payments.dateTo": "To date",
   "payments.showingFiltered": "Showing filtered payments:",
