--- a/frontend/src/lib/i18n/translations/fr.json
+++ b/frontend/src/lib/i18n/translations/fr.json
@@ -310,7 +310,12 @@
   "payments.allTypes": "Tous les types",
   "payments.typeExpense": "Dépense externe",
   "payments.typeTransfer": "Transfert interne",
+  "payments.typeInflow": "Fonds externes",
   "payments.typeRecurring": "Récurrent",
+  "payments.externalInflow": "Fonds externe",
+  "payments.inflowReceiver": "Reçu par",
+  "payments.externalInflowTo": "Fonds externe vers",
+  "payments.externalIndicator": "Externe",
   "payments.dateFrom": "Date de début",
   "payments.dateTo": "Date de fin",
   "payments.showingFiltered": "Affichage de paiements filtrés:",
