--- a/frontend/src/lib/i18n/translations/fr.json
+++ b/frontend/src/lib/i18n/translations/fr.json
@@ -187,6 +187,7 @@
   "overview.goToDate": "Aller au {date}",
   "overview.noPreviousPayment": "Aucun paiement précédent",
   "overview.noNextPayment": "Aucun paiement suivant",
+  "overview.includeDrafts": "Inclure les brouillons",
 
   "cashflow.title": "Planification de trésorerie",
   "cashflow.failedToLoad": "Échec du chargement de la projection de trésorerie",
@@ -328,6 +329,11 @@
   "payments.dateRangeFromTo": "du {startDate} au {endDate}",
   "payments.startingFrom": "à partir du {date}",
   "payments.occurringOn": "le {date}",
+  "payments.status": "Statut",
+  "payments.statusFinal": "Final",
+  "payments.statusDraft": "Brouillon",
+  "payments.filterByStatus": "Statut",
+  "payments.allStatuses": "Tous les statuts",
 
   "participants.title": "Participants",
   "participants.description": "Personnes physiques ou morales participant au projet, avec ou sans utilisateur membre associé",
