Add warning banners when account will go negative in the next month, configurable in settings

--- a/frontend/src/lib/i18n/translations/en.json
+++ b/frontend/src/lib/i18n/translations/en.json
@@ -191,6 +191,11 @@
   "overview.projectedTotal": "Projected Total",
   "overview.minimumTotal": "Minimum",
   "overview.poolNegativeWarning": "Pool balance goes negative in this period!",
+  "overview.poolWillGoNegative": "{pool} will go negative on {date} if you don't add funds",
+  "overview.poolIsNegative": "{pool} is negative, add funds",
+  "overview.userWillGoNegative": "{user}'s share in {pool} will go negative on {date}",
+  "overview.userIsNegative": "{user}'s share in {pool} is negative",
+  "overview.warningPeriod": "Warning Period",
 
   "cashflow.title": "Cashflow Planning",
   "cashflow.failedToLoad": "Failed to load cashflow projection",
@@ -475,6 +480,15 @@
   "projectSettings.handleDelete.cancel": "Project name does not match",
   "projectSettings.handleDelete.fail": "Failed to delete project",
   "projectSettings.copyParticipantInviteUrl.fail": "Failed to copy to clipboard",
+  "projectSettings.poolWarningSettings": "Pool Warning Settings",
+  "projectSettings.poolWarningDescription": "Configure when to show warnings about pool accounts going negative. The warning will always be visible regardless of the current date range.",
+  "projectSettings.warningHorizon": "Warning Period",
+  "projectSettings.horizonEndOfCurrentMonth": "End of current month",
+  "projectSettings.horizonEndOfNextMonth": "End of next month",
+  "projectSettings.horizon3Months": "3 months from now",
+  "projectSettings.horizon6Months": "6 months from now",
+  "projectSettings.handleSavePoolWarning.success": "Pool warning settings updated",
+  "projectSettings.handleSavePoolWarning.fail": "Failed to update pool warning settings",
 
   "weekdays.sun": "Sun",
   "weekdays.mon": "Mon",
