--- a/frontend/src/lib/i18n/translations/fr.json
+++ b/frontend/src/lib/i18n/translations/fr.json
@@ -191,6 +191,11 @@
   "overview.projectedTotal": "Total projeté",
   "overview.minimumTotal": "Minimum",
   "overview.poolNegativeWarning": "Le solde du pot commun devient négatif sur cette période !",
+  "overview.poolWillGoNegative": "{pool} deviendra négatif le {date} si vous n'ajoutez pas de fonds",
+  "overview.poolIsNegative": "{pool} est négatif, ajoutez des fonds",
+  "overview.userWillGoNegative": "La part de {user} dans {pool} deviendra négative le {date}",
+  "overview.userIsNegative": "La part de {user} dans {pool} est négative",
+  "overview.warningPeriod": "Période d'alerte",
 
   "cashflow.title": "Planification de trésorerie",
   "cashflow.failedToLoad": "Échec du chargement de la projection de trésorerie",
@@ -475,6 +480,15 @@
   "projectSettings.handleDelete.cancel": "Le nom du projet ne correspond pas",
   "projectSettings.handleDelete.fail": "Échec de la suppression du projet",
   "projectSettings.copyParticipantInviteUrl.fail": "Échec de la copie dans le presse-papiers",
+  "projectSettings.poolWarningSettings": "Paramètres d'alerte de la cagnotte",
+  "projectSettings.poolWarningDescription": "Configurez quand afficher des alertes pour les comptes de cagnotte devenant négatifs. L'alerte sera toujours visible quelle que soit la plage de dates actuelle.",
+  "projectSettings.warningHorizon": "Période d'alerte",
+  "projectSettings.horizonEndOfCurrentMonth": "Fin du mois en cours",
+  "projectSettings.horizonEndOfNextMonth": "Fin du mois prochain",
+  "projectSettings.horizon3Months": "Dans 3 mois",
+  "projectSettings.horizon6Months": "Dans 6 mois",
+  "projectSettings.handleSavePoolWarning.success": "Paramètres d'alerte de la cagnotte mis à jour",
+  "projectSettings.handleSavePoolWarning.fail": "Échec de la mise à jour des paramètres d'alerte",
 
   "weekdays.sun": "Dim",
   "weekdays.mon": "Lun",
