Warnings settings are now configurable per account and for the account itself or users, and we can disable them completely. Improve horizon and removed Today/Until today as already there in date picker

--- a/frontend/src/lib/i18n/translations/en.json
+++ b/frontend/src/lib/i18n/translations/en.json
@@ -173,11 +173,11 @@
   "overview.selectEndDate": "Select end date",
   "overview.horizon": "Horizon",
   "overview.horizonNone": "None",
+  "overview.thisMonth": "This Month",
+  "overview.nextMonth": "Next Month",
   "overview.threeMonths": "3 Months",
   "overview.sixMonths": "6 Months",
   "overview.twelveMonths": "12 Months",
-  "overview.customDate": "Custom",
-  "overview.untilToday": "Until Today",
   "overview.atStart": "At start",
   "overview.atEnd": "At end",
   "overview.amountPaidFor": "{payer} paid {amount} for {paidFor}",
@@ -480,9 +480,11 @@
   "projectSettings.handleDelete.cancel": "Project name does not match",
   "projectSettings.handleDelete.fail": "Failed to delete project",
   "projectSettings.copyParticipantInviteUrl.fail": "Failed to copy to clipboard",
-  "projectSettings.poolWarningSettings": "Pool Warning Settings",
-  "projectSettings.poolWarningDescription": "Configure when to show warnings about pool accounts going negative. The warning will always be visible regardless of the current date range.",
-  "projectSettings.warningHorizon": "Warning Period",
+  "projectSettings.poolWarningSettingsFor": "{pool} Warning Settings",
+  "projectSettings.poolWarningDescription": "Configure when to show warnings. The warning will always be visible regardless of the current date range.",
+  "projectSettings.warningHorizonAccount": "Warn when pool total goes negative",
+  "projectSettings.warningHorizonUsers": "Warn when any user share goes negative",
+  "projectSettings.warningDisabled": "Disabled",
   "projectSettings.horizonEndOfCurrentMonth": "End of current month",
   "projectSettings.horizonEndOfNextMonth": "End of next month",
   "projectSettings.horizon3Months": "3 months from now",
