--- a/frontend/src/lib/i18n/translations/fr.json
+++ b/frontend/src/lib/i18n/translations/fr.json
@@ -173,11 +173,11 @@
   "overview.selectEndDate": "Sélectionner la date de fin",
   "overview.horizon": "Horizon",
   "overview.horizonNone": "Aucun",
+  "overview.thisMonth": "Ce mois-ci",
+  "overview.nextMonth": "Mois prochain",
   "overview.threeMonths": "3 mois",
   "overview.sixMonths": "6 mois",
   "overview.twelveMonths": "12 mois",
-  "overview.customDate": "Personnalisé",
-  "overview.untilToday": "Jusqu'à aujourd'hui",
   "overview.atStart": "Au début",
   "overview.atEnd": "À la fin",
   "overview.amountPaidFor": "{payer} a payé {amount} pour {paidFor}",
@@ -480,9 +480,11 @@
   "projectSettings.handleDelete.cancel": "Le nom du projet ne correspond pas",
   "projectSettings.handleDelete.fail": "Échec de la suppression du projet",
   "projectSettings.copyParticipantInviteUrl.fail": "Échec de la copie dans le presse-papiers",
-  "projectSettings.poolWarningSettings": "Paramètres d'alerte de la cagnotte",
-  "projectSettings.poolWarningDescription": "Configurez quand afficher des alertes pour les comptes de cagnotte devenant négatifs. L'alerte sera toujours visible quelle que soit la plage de dates actuelle.",
-  "projectSettings.warningHorizon": "Période d'alerte",
+  "projectSettings.poolWarningSettingsFor": "Paramètres d'alerte pour {pool}",
+  "projectSettings.poolWarningDescription": "Configurez quand afficher des alertes. L'alerte sera toujours visible quelle que soit la plage de dates actuelle.",
+  "projectSettings.warningHorizonAccount": "Alerter quand le total de la cagnotte devient négatif",
+  "projectSettings.warningHorizonUsers": "Alerter quand la part d'un utilisateur devient négative",
+  "projectSettings.warningDisabled": "Désactivé",
   "projectSettings.horizonEndOfCurrentMonth": "Fin du mois en cours",
   "projectSettings.horizonEndOfNextMonth": "Fin du mois prochain",
   "projectSettings.horizon3Months": "Dans 3 mois",
